--- a/index.html
+++ b/index.html
@@ -1,15 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="style.css">
-    <title>Anasayfa</title>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Osama Asker</title>
 </head>
-
 <body>
+    <header class="header" >
+        <div id="menubar" class="fa-solid fa-bars"></div>
+        <a href="index.html"class="logo">Osama 
+            <span>syr</span>
+        </a>
+        <nav class=navc>
+            <a href="index.html">Home</a>
+            <a href="indexcv.html" >CV</a>
+            <a href="indexMyCity.html" >MyCity</a>
+            <a href="api.html" >Interests</a>
+            <a href="Communication.html" >Communication</a>
+        </nav>
+        <div id="login-btn">
+                <button type="button" class="bz">login</button>
+                <i class="fa-solid fa-user"></i>
+            </div>
+    </header>
+    <section class="loginfrm"> 
+        <span class="fa-solid fa-xmark" id="close-login-btn"></span>
+        <form action="logi.php8" method="post">
+            <h3>login </h3>
+            <input type="email" placeholder="email" class="box">
+            <input type="password" placeholder="password" class="box" id="kullaniciAdi" name="kullaniciAdi">
+            <input type="submit" value="login now" class="bz" id="sifre" name="sifre">
+                        <button type="reset" class="bz" >Temizle</button>
 
+            <p>or login with</p>
+            <div class="btns">
+                <a href="#" class="bz">google</a>
+                <a href="#" class="bz">facebook</a>
+            </div>
+        </form>
+    </section>
+    <section class="main">
+        <div>
+            <h2> hello Im Osama
+                <br> 
+                    <span>computer engineer </span>
+            </h2>
+            <h3>Computer engineer</h3>
+            <a href="#asd" class="btn">Show more information about me</a>
+            <div class="soc">
+                <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://github.com/osamaasker30" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://x.com/UsemeMuhAsker" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+                <a href="https://youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+        </div>
+    </section>
+    <section class="firs" id="asd">
+        <img class="hassans" src="img/Image 2025-05-24 at 19.34.08_1cd0abf5.jpg" alt="hassan">
+        <div class="carbd" >
+            <div class="inn">
+                <p>
+                    hello,  I am Osama Asker, a Syrian national, I was born in the city  <br>of Aleppo on 01.01.2003 I have been living in Turkey for 12 years.
+                    <br>Now I am studying  at Sakarya University in the Faculty of  Computer Engineering.
+                </p>
+            </div>
+    </section>
+    <section class="cd">
+        <h2 class="title">My hobbies </h2>
+        <div class="ct">
+            <div class="card">
+                <a href="https://en.wikipedia.org/wiki/Football" class="lik">
+                <div class="imgf">
+                    <img src="img/124-224927-messi-world-cup-2022-celebrations_700x400.jpg" alt="footbal" >
+                </div>
+                <div class="in">
+                    <h3>Football</h3>
+                    <p>
+                        Football, also known as soccer in some countries, can mean different things to different people. However, generally speaking, football is more than just a sport to many people; it can be a way of life and a source of identity and pride.
+                        For some, football is a way of escaping the stresses of everyday life and immersing oneself in the excitement and passion of the game. It can be a way of connecting with others who share a love of the sport, and of building social bonds and communities.
+                        For others, football is a source of national pride and identity. It can bring together people from different regions, cultures, and backgrounds, and create a sense of unity and shared purpose. Football can also serve as a way of promoting a positive image of a country to the rest of the world, and of showcasing the talents and skills of its players.
+                        Furthermore, football can be a symbol of perseverance, determination, and hard work. It requires discipline, training, and teamwork, and can be a powerful tool for personal and societal growth. It can inspire people to overcome obstacles and strive for excellence, both on and off the field.In summary, football can mean a lot of different things to different people, but it often goes beyond just a sport and can encompass social, cultural, and personal values and ideals.
+                    </p>
+                </div>
+            </a>
+            </div>
+            <div class="card">
+                <a href="https://en.wikipedia.org/wiki/Chess" class="lik">
+                <div class="imgf">
+                    <img src="img/thumb2-4k-chess-knight-horses-chess-pieces-knight-chess.jpg" alt="footbal">
+                </div>
+                <div class="in">
+                    <h3>Chess</h3>
+                    <p>
+                        Chess is a game that has been played for centuries and remains popular today. It is a game of strategy, skill, and patience that requires players to think ahead and make calculated moves. The game is played on a board with 64 squares and 32 pieces, with each player controlling 16 pieces.
+                        At the start of the game, each player moves their pieces according to a set of rules. The goal is to capture the opponent's pieces and ultimately their king. The game can be won by checkmate, which is a position where the opponent's king is under attack and cannot escape capture.
+                        Chess is a game that requires mental acuity and concentration. It has been shown to improve cognitive abilities, memory, and critical thinking skills. The game can also teach important life lessons such as patience, perseverance, and sportsmanship. It requires players to think creatively and develop their own unique playing style.
+                        One of the unique aspects of chess is its universality. The game can be played by people of all ages, genders, and cultural backgrounds. It is a game that transcends language barriers and can bring people together.
+                        In addition to being a popular game, chess has also been used as a tool for education and social change. It has been introduced in schools as a way to improve academic performance and develop critical thinking skills. Chess has also been used as a tool for social change, promoting peace and understanding between cultures.
+                        In conclusion, chess is a game that offers a challenging and rewarding experience. It requires mental acuity, patience, and concentration, and can teach important life lessons. The universality of the game makes it a powerful tool for education and social change, and its popularity continues to endure.
+                    </p>
+                </div>
+            </div>
+            </a>
+            <div class="card">
+                <a href="https://en.wikipedia.org/wiki/Reading" class="lik">
+                <div class="imgf">
+                    <img src="img/613e1a5083d0f.jpg" alt="footbal">
+                </div>
+                <div class="in">
+                    <h3>Reading books</h3>
+                    <p>
+                        Reading books is a common hobby enjoyed by people of all ages around the world. It is an activity that offers numerous benefits, including entertainment, education, and personal growth. Moreover, the act of reading books can contribute to an individual's identity in several ways.
+                        Firstly, reading books can help shape a person's worldview. Exposure to a diverse range of literary works can broaden one's perspective and increase empathy and understanding towards others. Reading books on different topics can also expand knowledge and create new interests, contributing to personal growth and development.
+                        Secondly, the books a person reads can reflect their identity. The genres, authors, and themes that one chooses to read can reveal personal preferences, values, and beliefs. Additionally, reading books can be a form of self-expression and an opportunity for people to explore their own thoughts and emotions.
+                        Thirdly, reading books can be a way for individuals to connect with others and build a sense of community. Joining book clubs, attending author talks, and discussing books with others can create opportunities for social engagement and networking.
+                        Lastly, reading books can be a form of escapism. Engaging in a captivating novel can transport individuals to different worlds and offer temporary relief from stress and anxiety. It can also serve as a way to disconnect from technology and the outside world, allowing for a moment of relaxation and introspection.
+                        In conclusion, reading books is an activity that can contribute to an individual's identity in various ways. It can broaden one's worldview, reflect personal preferences and beliefs, foster community engagement, and serve as a form of escapism. As such, it is a hobby that continues to endure and offer numerous benefits to those who partake in it.
+                    </p>
+                </div>
+            </div>
+            </a>
+        </div>
+        
+    </section>
+    <footer class="foo">
+    <p class="foo-title">Osama  <span> Asker</span></p>
+    <!-- <div class="soc">
+        <a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://github.com"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.tiktok.com"><i class="fa-brands fa-tiktok"></i></a>
+        <a href="https://youtube.com"><i class="fa-brands fa-youtube"></i></a>
+    </div> -->
+    <a href="index.html">
+    <i class="fa-solid fa-arrow-up" ></i>
+    </a>
+    </footer>
+    <script src="js/main.js"></script>
 </body>
-
 </html>
+
